--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -202,3 +202,11 @@ body {
 *:is(:focus-visible) {
   outline: 2px solid var(--color-primary);
 }
+
+html.lock-scroll,
+body.lock-scroll {
+  overflow: hidden !important;
+  height: 100%;
+  touch-action: none;
+  overscroll-behavior: none;
+}
